--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K0YBNMDQCS"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-K0YBNMDQCS');
+</script>
 testing
 <h1>TESTING</h1>
